Logs/nanotec_yes.out
  File "/Users/christerolsen/nanotec_yes_to_all.sh", line 2
    END=$((SECONDS + 43200))
        ^
SyntaxError: invalid syntax
